<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">calculator</string>
    <string name="textTextView" translatable="false">0</string>
    <string name="_0" translatable="false">0</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="plus" translatable="false">+</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="minus" translatable="false">-</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="multiply" translatable="false">*</string>
    <string name="point" translatable="false">.</string>
    <string name="result" translatable="false">=</string>
    <string name="divide" translatable="false">/</string>
    <string name="clear" translatable="false">C</string>
    <string name="errorString">Cannot be divided by zero</string>
    <string name="imgDescription" translatable="false">img</string>
    <string name="myTheme" translatable="false">My Theme</string>
    <string name="themeSelect" translatable="false">Theme select</string>
    <string name="lightTheme" translatable="false">Light Theme</string>
    <string name="darkTheme" translatable="false">Dark Theme</string>
    <string name="applyButtonText">Apply</string>
    <string name="settingsButtonText">Settings</string>
</resources>