<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutMargin"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/themeSelect"
        android:textSize="@dimen/textSize" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darkTheme"
            android:textSize="@dimen/textSize" />

        <RadioButton
            android:id="@+id/radioButtonLightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightTheme"
            android:textSize="@dimen/textSize"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonMyTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myTheme"
            android:textSize="@dimen/textSize" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:text="@string/applyButtonText"
        android:layout_gravity="center"/>

</LinearLayout>